Organize imports + formatting